Design: 전체 레이아웃 수정

--- a/apps/soso-web/src/app/globals.css
+++ b/apps/soso-web/src/app/globals.css
@@ -56,6 +56,10 @@ body {
   font-family: 'Pretendard', sans-serif;
 }
 
+.layout-center {
+  @apply left-1/2 m-auto w-full max-w-screen -translate-x-1/2;
+}
+
 input,
 select,
 textarea {
