--- a/apps/soso-web/src/app/globals.css
+++ b/apps/soso-web/src/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --vh: 100%;
+}
+
+@supports (-webkit-touch-callout: none) {
+  :root {
+    --vh: 100vh; /* Safari에서 동작하도록 설정 */
+  }
+}
+
 @layer base {
   ::-webkit-scrollbar {
     width: 6px;
