--- a/apps/soso-web/src/app/globals.css
+++ b/apps/soso-web/src/app/globals.css
@@ -75,3 +75,13 @@ textarea {
 pre {
   white-space: pre-wrap;
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
